@@ -7,11 +7,10 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 @ControllerAdvice
 class GlobalExceptionHandler {
@@ -34,14 +33,14 @@ class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     @ExceptionHandler(value = Exception.class)
     public @ResponseBody ErrorResponse handleUnexpectedErrors(Exception ex) {
-        List<String> errorMessage = Arrays.asList( "Unknown error occured",ex.getClass().getCanonicalName());
+        List<String> errorMessage = Arrays.asList( "Unknown error occured",ex.getClass().getCanonicalName(), ex.getMessage());
        return ErrorResponse.forUnhandledError(errorMessage);
     }
 
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    @ExceptionHandler(value = ResponseStatusException.class)
-    public @ResponseBody ErrorResponse handleResponseStatusExceptions (ResponseStatusException ex) {
-        List<String> errorMessage = Collections.singletonList(ex.getReason());
+    @ExceptionHandler(value = NoSuchElementException.class)
+    public @ResponseBody ErrorResponse handleNoSuchElementExceptions (NoSuchElementException ex) {
+        List<String> errorMessage = List.of("Expense with given Id does not exist");
     return  ErrorResponse.forNotFoundError(errorMessage);
     }
 }
